Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.0
-
None
-
-
2e8c6d467 (dev), 11f242174 (dev), ced930156 (6.7), 5edb9a6a0 (6.7)
Description
Compiling code based on Qt 6.7.0 with MSVC compiler vc16 (14.29.30133) causes compile error:
Qt\6.7.0\include\QtCore\qstringbuilder.h(118) : error C2220: the following warning is treated as an error
Qt\6.7.0\include\QtCore\qstringbuilder.h(118) : warning C4702: unreachable code
Adding an else statement in qstringbuilder.h to if constexpr ( seems to fix the compile error.
Code before (with compile error):
Code after (without compile error):